--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,4 +1,7 @@
 singleQuote: true
 semi: false
 printWidth: 100
-trailingComma: none
+trailingComma: es5
+tabWidth: 4
+bracketSameLine: true
+quoteProps: preserve
