Validate license key by keygen api

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-MAIN_VITE_TEST=test_env
-PRELOAD_VITE_KEY=test_env
-RENDERER_VITE_KEY=test_env
-VITE_KEY==test_env
+MAIN_VITE_TEST=""
+PRELOAD_VITE_KEY=""
+RENDERER_VITE_KEY=""
+VITE_KEY==""
 
-MAIN_API_KEY=your_api_key_here
-MAIN_LICENSE_KEY=your_license_key_here
+MAIN_VITE_KEYGEN_API_KEY=https://api.keygen.sh/v1/accounts/abdulrehman51423/licenses/actions/validate-key
+MAIN_VITE_KEYGEN_LICENSE_KEY=B89651-760F59-34E654-60DDD6-946458-V3
 
 
