--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "electron-store": "^10.0.0",
-    "lucide-react": "^0.471.1"
+    "lucide-react": "^0.471.1",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
