Add sentryVitePlugin for monitoring & fixing errors

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ VITE_KEY=="YOUR_VITE_TEST"
 MAIN_VITE_KEYGEN_API_KEY=https://api.keygen.sh/v1/accounts/abdulrehman51423/licenses/actions/validate-key
 MAIN_VITE_KEYGEN_LICENSE_KEY=B89651-760F59-34E654-60DDD6-946458-V3
 
-
+MAIN_VITE_SENTRY_AUTH_TOKEN="YOUR_MAIN_VITE_SENTRY_AUTH_TOKEN"
+MAIN_VITE_RELEASE="YOUR_MAIN_VITE_RELEASE"
