--- a/package.json
+++ b/package.json
@@ -1,53 +1,55 @@
 {
-  "name": "electron-license-distribution-kit",
-  "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
-  "main": "./out/main/index.js",
-  "author": "Abdul Rehman",
-  "license": "MIT",
-  "scripts": {
-    "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
-    "typecheck": "npm run typecheck:node && npm run typecheck:web",
-    "start": "electron-vite preview",
-    "dev": "rimraf out && electron-vite dev",
-    "build": "npm run typecheck && electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux"
-  },
-  "dependencies": {
-    "@electron-toolkit/preload": "^3.0.1",
-    "@electron-toolkit/utils": "^3.0.0",
-    "electron-store": "^8.2.0",
-    "lucide-react": "^0.471.1"
-  },
-  "devDependencies": {
-    "@electron-toolkit/eslint-config-prettier": "^2.0.0",
-    "@electron-toolkit/eslint-config-ts": "^2.0.0",
-    "@electron-toolkit/tsconfig": "^1.0.1",
-    "@types/electron-store": "^3.2.2",
-    "@types/node": "^20.14.8",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "electron": "^31.0.2",
-    "electron-builder": "^24.13.3",
-    "electron-vite": "^2.3.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "postcss": "^8.5.1",
-    "prettier": "^3.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.5.2",
-    "vite": "^5.3.1"
-  }
+    "name": "electron-license-distribution-kit",
+    "version": "1.0.0",
+    "description": "An Electron application with React and TypeScript",
+    "main": "./out/main/index.js",
+    "author": "Abdul Rehman",
+    "license": "MIT",
+    "scripts": {
+        "format": "prettier --write .",
+        "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+        "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
+        "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
+        "typecheck": "npm run typecheck:node && npm run typecheck:web",
+        "start": "electron-vite preview",
+        "dev": "rimraf out && electron-vite dev",
+        "build": "npm run typecheck && electron-vite build",
+        "postinstall": "electron-builder install-app-deps",
+        "build:unpack": "npm run build && electron-builder --dir",
+        "build:win": "npm run build && electron-builder --win",
+        "build:mac": "electron-vite build && electron-builder --mac",
+        "build:linux": "electron-vite build && electron-builder --linux"
+    },
+    "dependencies": {
+        "@electron-toolkit/preload": "^3.0.1",
+        "@electron-toolkit/utils": "^3.0.0",
+        "@sentry/electron": "^5.10.0",
+        "@sentry/vite-plugin": "^3.0.0",
+        "electron-store": "^8.2.0",
+        "lucide-react": "^0.471.1"
+    },
+    "devDependencies": {
+        "@electron-toolkit/eslint-config-prettier": "^2.0.0",
+        "@electron-toolkit/eslint-config-ts": "^2.0.0",
+        "@electron-toolkit/tsconfig": "^1.0.1",
+        "@types/electron-store": "^3.2.2",
+        "@types/node": "^20.14.8",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.20",
+        "electron": "^31.0.2",
+        "electron-builder": "^24.13.3",
+        "electron-vite": "^2.3.0",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react": "^7.34.3",
+        "postcss": "^8.5.1",
+        "prettier": "^3.3.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "rimraf": "^6.0.1",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.5.2",
+        "vite": "^5.3.1"
+    }
 }
